Improve notification actors and navigation
This change adds actor metadata to notifications, tracks the triggering user for friend requests, likes, comments, and contact messages, and keeps admin-triggered notifications from being treated as social actors. It also filters admin profiles from discovery and updates the frontend notification bell to render richer actor info and navigate to the correct target (profile, messages, or feed post).